add - Added message for unsupported command on RKM
---

We've added a message that will show up when one requests an unsupported
RPC command on RKM.

---

Type: add
Breaking: False
Doc Required: False
Backport Required: False
Part: 1/1

--- a/public/Nitrocid.Apps/Nitrocid.Rkm/Resources/Languages/Output/Localizations.ar.resx
+++ b/public/Nitrocid.Apps/Nitrocid.Rkm/Resources/Languages/Output/Localizations.ar.resx
@@ -159,5 +159,8 @@
   <data name="NKS_RKM_FAILED" xml:space="preserve">
     <value>فشلت محاولة معالجة أمر لمثيل Nitrocid</value>
   </data>
+  <data name="NKS_RKM_UNKNOWN_COMMAND" xml:space="preserve">
+    <value>أمر غير معروف أو غير مدعوم</value>
+  </data>
 
 </root>
