--- a/public/Nitrocid.Apps/Nitrocid.Rkm/Resources/Languages/ind-T.json
+++ b/public/Nitrocid.Apps/Nitrocid.Rkm/Resources/Languages/ind-T.json
@@ -61,6 +61,10 @@
     {
       "loc": "NKS_RKM_FAILED",
       "text": "नाइट्रोसिड इंस्टेंस के लिए कमांड प्रोसेस करने की कोशिश करते समय फेल हो गया"
+    },
+    {
+      "loc": "NKS_RKM_UNKNOWN_COMMAND",
+      "text": "अज्ञात या असमर्थित कमांड"
     }
   ]
 }
