--- a/public/Nitrocid.Apps/Nitrocid.Rkm/Resources/Languages/ndo.json
+++ b/public/Nitrocid.Apps/Nitrocid.Rkm/Resources/Languages/ndo.json
@@ -61,6 +61,10 @@
     {
       "loc": "NKS_RKM_FAILED",
       "text": "Gagal saat mencoba memproses perintah untuk instans Nitrocid"
+    },
+    {
+      "loc": "NKS_RKM_UNKNOWN_COMMAND",
+      "text": "Perintah tidak dikenal atau tidak didukung"
     }
   ]
 }
