--- a/public/Nitrocid.Apps/Nitrocid.Rkm/Resources/Languages/ptg.json
+++ b/public/Nitrocid.Apps/Nitrocid.Rkm/Resources/Languages/ptg.json
@@ -71,6 +71,10 @@
     {
       "loc": "NKS_RKM_FAILED",
       "text": "Falha ao tentar processar o comando para a instância Nitrocid"
+    },
+    {
+      "loc": "NKS_RKM_UNKNOWN_COMMAND",
+      "text": "Comando desconhecido ou não suportado"
     }
   ]
 }
