--- a/public/Nitrocid.Apps/Nitrocid.Rkm/Resources/Languages/rmn.json
+++ b/public/Nitrocid.Apps/Nitrocid.Rkm/Resources/Languages/rmn.json
@@ -62,6 +62,10 @@
     {
       "loc": "NKS_RKM_FAILED",
       "text": "Eșuat la încercarea de procesare a comenzii pentru instanța Nitrocid"
+    },
+    {
+      "loc": "NKS_RKM_UNKNOWN_COMMAND",
+      "text": "Comandă necunoscută sau neacceptată"
     }
   ]
 }
