--- a/public/Nitrocid.Apps/Nitrocid.Rkm/Resources/Languages/ukr.json
+++ b/public/Nitrocid.Apps/Nitrocid.Rkm/Resources/Languages/ukr.json
@@ -61,6 +61,10 @@
     {
       "loc": "NKS_RKM_FAILED",
       "text": "Помилка під час спроби обробки команди для екземпляра Nitrocid"
+    },
+    {
+      "loc": "NKS_RKM_UNKNOWN_COMMAND",
+      "text": "Невідома або непідтримувана команда"
     }
   ]
 }
