--- a/public/Nitrocid.Apps/Nitrocid.Rkm/Resources/Languages/Output/Localizations.nl.resx
+++ b/public/Nitrocid.Apps/Nitrocid.Rkm/Resources/Languages/Output/Localizations.nl.resx
@@ -159,5 +159,8 @@
   <data name="NKS_RKM_FAILED" xml:space="preserve">
     <value>Proberen om opdracht voor de Nitrocid-instantie te verwerken mislukt</value>
   </data>
+  <data name="NKS_RKM_UNKNOWN_COMMAND" xml:space="preserve">
+    <value>Onbekende of niet-ondersteunde opdracht</value>
+  </data>
 
 </root>
