--- a/public/Nitrocid.Apps/Nitrocid.Rkm/Resources/Languages/brz.json
+++ b/public/Nitrocid.Apps/Nitrocid.Rkm/Resources/Languages/brz.json
@@ -60,6 +60,10 @@
     {
       "loc": "NKS_RKM_FAILED",
       "text": "Falha ao tentar processar o comando para a instância do Nitrocid"
+    },
+    {
+      "loc": "NKS_RKM_UNKNOWN_COMMAND",
+      "text": "Comando desconhecido ou não suportado"
     }
   ]
 }
