--- a/public/Nitrocid.Apps/Nitrocid.Rkm/Resources/Languages/cnt-T.json
+++ b/public/Nitrocid.Apps/Nitrocid.Rkm/Resources/Languages/cnt-T.json
@@ -64,6 +64,10 @@
     {
       "loc": "NKS_RKM_FAILED",
       "text": "嘗試處理 Nitrocid 實例的命令時失敗"
+    },
+    {
+      "loc": "NKS_RKM_UNKNOWN_COMMAND",
+      "text": "未知或不支援的命令"
     }
   ]
 }
