--- a/public/Nitrocid.Apps/Nitrocid.Rkm/Resources/Languages/grk.json
+++ b/public/Nitrocid.Apps/Nitrocid.Rkm/Resources/Languages/grk.json
@@ -62,6 +62,10 @@
     {
       "loc": "NKS_RKM_FAILED",
       "text": "Αποτυχία κατά την προσπάθεια επεξεργασίας εντολής για την παρουσία Nitrocid"
+    },
+    {
+      "loc": "NKS_RKM_UNKNOWN_COMMAND",
+      "text": "Άγνωστη ή μη υποστηριζόμενη εντολή"
     }
   ]
 }
