--- a/public/Nitrocid.Apps/Nitrocid.Rkm/Resources/Languages/kor-T.json
+++ b/public/Nitrocid.Apps/Nitrocid.Rkm/Resources/Languages/kor-T.json
@@ -62,6 +62,10 @@
     {
       "loc": "NKS_RKM_FAILED",
       "text": "Nitrocid 인스턴스에 대한 명령을 처리하는 동안 실패했습니다."
+    },
+    {
+      "loc": "NKS_RKM_UNKNOWN_COMMAND",
+      "text": "알 수 없거나 지원되지 않는 명령"
     }
   ]
 }
